--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ p{
   .contact-card {
     background-color: #00B612;
     border-radius: 12px;
-    padding: 30px 30px;
+    padding: 10px 30px;
     min-width: 50px;
     text-align: center;
     max-height: 100px;
@@ -185,7 +185,6 @@ p{
     text-decoration: none;
     font-weight: 400;
     font-size: 10px;
-
   }
 
   .contact-card a:hover {
@@ -196,6 +195,13 @@ p{
     visibility: hidden;
   }
 
+  .signature-container{
+    cursor: pointer;
+    font-size: 8px;
+    margin-top: 65%;
+    position: relative;
+    right: 10%;
+  }
 
 
 /* Responsive styles */
@@ -210,10 +216,10 @@ p{
     gap: 5px;
   }
   header{
-    height: 63vh;
+    height: 57vh;
   }
   .hero{
-    top: 30%;
+    top: 26%;
     left: 35%;
     position: absolute;
     transform: translate(-30%, -30%);
@@ -229,7 +235,7 @@ p{
     .navbar {
         position: relative;
         height: auto;
-        padding: 10px;
+        padding: 8px;
     }
   h3{
     font-size: 10px;
@@ -275,14 +281,27 @@ p{
         text-align: center;
         border-bottom: 1px solid #ccc;
     }
-    
-  .contact-card {
+     .social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+  }
 
-    border-radius: 14px;
-    padding: 20px 20px;
+  .social-icons a {
+    background-color: #00B612;
+    color: #0d1b1e;
+    font-size: 0.5rem;
+    padding: 7px;
+    border-radius: 7px;
+    text-decoration: none;
+    transition: 0.3s;
+  } 
+  .contact-card {
+    border-radius: 25px;
+    padding: 10px 20px;
     min-width: 30px;
     text-align: center;
-    max-height: 70px;
+    max-height: 100px;
   }
 
       .footer-section {
@@ -304,5 +323,12 @@ p{
     border-radius: 4px;
     text-decoration: none;
     transition: 0.3s;
+  }
+    .signature-container{
+    cursor: pointer;
+    font-size: 7px;
+    margin-top: 65%;
+    position: relative;
+    right: 30%;
   }
 }
