--- a/style.css
+++ b/style.css
@@ -216,6 +216,7 @@ p{
     gap: 5px;
   }
   header{
+    background-image: linear-gradient(rgba(0,0,0,1 )), url(concept.jpg);
     height: 57vh;
   }
   .hero{
