--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 header{
-    background-image: linear-gradient(rgba(0,0,0,0.92 )), url(SSSW_LOGO.png);
+    background-image: linear-gradient(rgba(0,0,0,0.92 )), url(concept.jpg);
     height: 71vh;
     background-position: center;
     background-size: cover;
